--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -68,3 +68,7 @@ $weight-normal: 400;
 $weight-medium: 500;
 $weight-semibold: 600;
 $weight-bold: 700;
+
+// Adaptive width and height
+$width-size: 1080px;
+$height-size: auto;
