--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -53,7 +53,7 @@ a:hover {
 
 .aside,
 .section {
-  padding: 1.5rem;
+  padding: 0.6rem;
 }
 
 .header {
@@ -62,6 +62,8 @@ a:hover {
 
 .hero {
   display: flex;
+  height: 100vh;
+  min-height: 100vh;
   align-items: stretch;
   flex-direction: column;
   justify-content: space-between;
@@ -80,11 +82,16 @@ a:hover {
     &>.container {
       display: flex;
       width: $width-size;
-      justify-content: center;
+      justify-content: flex-start;
+
+      .about {
+        &+.aside {
+          display: none;
+        }
+      }
     }
   }
 }
-
 
 .footer {
   background-color: var(--white-bis);
