--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -29,11 +29,12 @@
 $primary-color-dark: #0288D1; // 深色背景色
 $primary-color: #03A9F4; // 主要背景色
 $primary-color-light: #B3E5FC; // 背景文字
-$primary-color-text: #FFFFFF; // 文字/图标
+$primary-color-text: #FFF; // 文字/图标
 $accent-color: #9E9E9E; //图标颜色
 $primary-text-color: #212121; // 主要文字
 $secondary-text-color: #757575; //常规文字
 $divider-color: #BDBDBD; // 次要文字
+$border-frame: #dcdfe6; //一级边框
 
 // Typography style
 $family-sans-serif: BlinkMacSystemFont,
@@ -72,3 +73,9 @@ $weight-bold: 700;
 // Adaptive width and height
 $width-size: 1080px;
 $height-size: auto;
+
+// svg width and height
+$svg-width: 2em;
+$svg-height: 2em;
+
+$radius-size: 0.143rem;
