chore: update about And archive file

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -100,7 +100,8 @@ a:hover {
 
 .hot-wrap,
 .tag-wrap,
-.catg-wrap {
+.catg-wrap,
+.archive-wrap {
   background-color: var(--white-bis);
   color: $secondary-text-color;
 }
