--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -36,6 +36,11 @@ $secondary-text-color: #757575; //常规文字
 $divider-color: #BDBDBD; // 次要文字
 $border-frame: #dcdfe6; //一级边框
 
+// form element style
+$form-bg-color:#e0e0e0;
+$form-icon-color: #bdbdbd;
+$form-iconTools-color: #bdbdbd;
+
 // Typography style
 $family-sans-serif: BlinkMacSystemFont,
 -apple-system,
