--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -30,14 +30,15 @@ $primary-color-dark: #0288D1; // 深色背景色
 $primary-color: #03A9F4; // 主要背景色
 $primary-color-light: #B3E5FC; // 背景文字
 $primary-color-text: #FFF; // 文字/图标
-$accent-color: #9E9E9E; //图标颜色
+$accent-color: #9E9E9E; // 图标颜色
 $primary-text-color: #212121; // 主要文字
-$secondary-text-color: #757575; //常规文字
+$secondary-text-color: #757575; // 常规文字
 $divider-color: #BDBDBD; // 次要文字
 $border-frame: #dcdfe6; //一级边框
 
 // form element style
 $form-bg-color:#e0e0e0;
+$form-sub-Color: #EFEFEF;
 $form-icon-color: #bdbdbd;
 $form-iconTools-color: #bdbdbd;
 
@@ -77,10 +78,19 @@ $weight-bold: 700;
 
 // Adaptive width and height
 $width-size: 1080px;
+$part-width-size: 760px;
+$side-width-size: 304px;
 $height-size: auto;
+$card-width: 180px;
+$card-height: 118px;
 
 // svg width and height
 $svg-width: 2em;
 $svg-height: 2em;
 
+// 边框圆角 size
 $radius-size: 0.143rem;
+
+// padding And margin spacing
+$spacing-oddSize: 0.071rem; // 奇数
+$spacing-evenSize: 0.143rem; // 偶数
