fix: 兼容浏览器

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,5 +9,8 @@
 // base style
 @import './base.scss';
 
+// mixin style
+@import './mixin.scss';
+
 // component style
 @import './components.scss';
