--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -41,6 +41,7 @@ $form-bg-color:#e0e0e0;
 $form-sub-Color: #EFEFEF;
 $form-icon-color: #bdbdbd;
 $form-iconTools-color: #bdbdbd;
+$form-bgBox-color: #fafafab3;
 
 // Typography style
 $family-sans-serif: BlinkMacSystemFont,
