--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -77,6 +77,7 @@ a:hover {
 .tag-wrap,
 .tags-wrap,
 .catg-wrap,
+.search-wrap,
 .archive-wrap {
   background-color: var(--white-bis);
   color: $secondary-text-color;
