--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -28,6 +28,15 @@ html {
   box-sizing: border-box;
 }
 
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
+}
+
 a {
   text-decoration: none;
   color: $secondary-text-color;
