--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -16,10 +16,13 @@
   --white: hsl(0, 0%, 100%);
 
   --orange: hsl(14, 100%, 53%);
+  --orange-opacity: hsl(14, 100%, 53%, 0.2);
   --yellow: hsl(48, 100%, 67%);
   --green: hsl(141, 53%, 53%);
   --turquoise: hsl(171, 100%, 41%);
+  --turquoise-opacity: hsl(171, 100%, 41%, 0.2);
   --cyan: hsl(204, 71%, 53%);
+  --cyan-opacity: hsl(204, 71%, 53%, 0.2);
   --blue: hsl(217, 71%, 53%);
   --purple: hsl(271, 100%, 71%);
   --red: hsl(348, 86%, 61%);
