--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -34,6 +34,7 @@ $primary-color: #03A9F4; // 主要背景色
 $primary-color-light: #B3E5FC; // 背景文字
 $primary-color-text: #FFF; // 文字/图标
 $accent-color: #9E9E9E; // 图标颜色
+$accent-hover-color: #828282; // 悬停图标颜色
 $primary-text-color: #212121; // 主要文字
 $secondary-text-color: #757575; // 常规文字
 $divider-color: #BDBDBD; // 次要文字
