--- a/components/levelcard/index.module.scss
+++ b/components/levelcard/index.module.scss
@@ -25,7 +25,7 @@
             color: var(--white-color);
           }
           .card-title {
-            @apply mb-4 mt-3 inline-block;
+            @apply mb-4 mt-3 inline-block font-semibold;
             color: var(--white-color);
           }
         }
