--- a/src/components/card/index.module.scss
+++ b/src/components/card/index.module.scss
@@ -1,6 +1,7 @@
 .card {
   &-wrap {
-    @apply p-2 mb-2 bg-gray-50;
+    @apply p-2 mb-2 bg-gray-50 sticky;
+    top: 63px;
     .card-head {
       @apply flex flex-row justify-start items-center p-1 border-b border-gray-200;
       .i-icon {
